--- a/Face/index.html
+++ b/Face/index.html
@@ -9,8 +9,14 @@
 <script type="text/javascript">
     $(function() {
         var params = {
-            // Request parameters
-        };
+            "largePersonGroupId": "sample_group",
+            "faceIds": [
+            "c5c24a82-6845-4031-9d5d-978df9175426",
+            "65d083d4-9447-47d1-af30-b626144bf0fb"
+            ],
+            "maxNumOfCandidatesReturned": 1,
+            "confidenceThreshold": 0.5
+          };
 
         $.ajax({
             // NOTE: You must use the same location in your REST call as you used to obtain your subscription keys.
