--- a/Face/index.html
+++ b/Face/index.html
@@ -7,22 +7,49 @@
 <body>
 
 <script type="text/javascript">
-    $(function() {
-        var params = {
-            "largePersonGroupId": "sample_group",
-            "faceIds": [
-            "c5c24a82-6845-4031-9d5d-978df9175426",
-            "65d083d4-9447-47d1-af30-b626144bf0fb"
-            ],
-            "maxNumOfCandidatesReturned": 1,
-            "confidenceThreshold": 0.5
-          };
+  $(function() {
+      var params = {"returnFaceId":true, "returnFaceLandmarks":false};
+
+      $.ajax({
+          // NOTE: You must use the same location in your REST call as you used to obtain your subscription keys.
+          //   For example, if you obtained your subscription keys from westus, replace "westcentralus" in the
+          //   URL below with "westus".
+          url: "https://westcentralus.api.cognitive.microsoft.com/face/v1.0/detect?" + $.param(params),
+          beforeSend: function(xhrObj){
+              // Request headers
+              xhrObj.setRequestHeader("Content-Type","application/json");
+
+              // NOTE: Replace the "Ocp-Apim-Subscription-Key" value with a valid subscription key.
+              xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key","26b9b465ce4d4aab93fda70cd5b033b6");
+          },
+          type: "POST",
+          // Request body
+          data: '{"url": "https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18118419_1473031866093413_7702277136369359025_n.jpg?_nc_cat=0&oh=bee0e08f5324d8a22c4189c24f4383f5&oe=5B9D2530"}'
+
+      })
+      .done(function(data) {
+        console.log("DETECT IS DONE! GREIT SUKSEESSS!");
+        console.log(data);
+        console.log(data[0]);
+        console.log(data[0]["faceId"]);
+
+        faceIds = [];
+
+        data.forEach(function (element) {
+          faceIds.push(element["faceId"]);
+        }
+      );
+
+        console.log("foreach litib");
+        console.log(faceIds);
+
+        var params2 = {};
 
         $.ajax({
             // NOTE: You must use the same location in your REST call as you used to obtain your subscription keys.
             //   For example, if you obtained your subscription keys from westus, replace "westcentralus" in the
             //   URL below with "westus".
-            url: "https://westcentralus.api.cognitive.microsoft.com/face/v1.0/identify?" + $.param(params),
+            url: "https://westcentralus.api.cognitive.microsoft.com/face/v1.0/identify?" + $.param(params2),
             beforeSend: function(xhrObj){
                 // Request headers
                 xhrObj.setRequestHeader("Content-Type","application/json");
@@ -32,15 +59,22 @@
             },
             type: "POST",
             // Request body
-            data: "{body}",
+            data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1,"confidenceThreshold": 0.1}'
+
         })
         .done(function(data) {
+          console.log("MORE SUKSIIISSS!");
+          console.log(data);
             alert("success");
         })
         .fail(function() {
             alert("error");
         });
-    });
+      })
+      .fail(function() {
+          alert("error");
+      });
+  });
 </script>
 </body>
 </html>
