--- a/Face/index.html
+++ b/Face/index.html
@@ -6,6 +6,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
+  <canvas id="myCanvas" width="800" height="700"></canvas>
   <style>
     .thumb {
       height: 75px;
@@ -20,28 +21,30 @@
   <script>
 
   makeblob = function (dataURL) {
-          var BASE64_MARKER = ';base64,';
-          if (dataURL.indexOf(BASE64_MARKER) == -1) {
-              var parts = dataURL.split(',');
-              var contentType = parts[0].split(':')[1];
-              var raw = decodeURIComponent(parts[1]);
-              return new Blob([raw], { type: contentType });
-          }
-          var parts = dataURL.split(BASE64_MARKER);
+      var BASE64_MARKER = ';base64,';
+      if (dataURL.indexOf(BASE64_MARKER) == -1) {
+          var parts = dataURL.split(',');
           var contentType = parts[0].split(':')[1];
-          var raw = window.atob(parts[1]);
-          var rawLength = raw.length;
+          var raw = decodeURIComponent(parts[1]);
+          return new Blob([raw], { type: contentType });
+      }
+      var parts = dataURL.split(BASE64_MARKER);
+      var contentType = parts[0].split(':')[1];
+      var raw = window.atob(parts[1]);
+      var rawLength = raw.length;
 
-          var uInt8Array = new Uint8Array(rawLength);
+      var uInt8Array = new Uint8Array(rawLength);
 
-          for (var i = 0; i < rawLength; ++i) {
-              uInt8Array[i] = raw.charCodeAt(i);
-          }
-
-          return new Blob([uInt8Array], { type: contentType });
+      for (var i = 0; i < rawLength; ++i) {
+          uInt8Array[i] = raw.charCodeAt(i);
       }
 
+      return new Blob([uInt8Array], { type: contentType });
+  }
+
     var IMAGE;
+    var FACES;
+
     function handleFileSelect(evt) {
       var files = evt.target.files; // FileList object
 
@@ -63,6 +66,19 @@
 
             console.log(e.target.result);
             IMAGE = e.target.result;
+
+
+            var c=document.getElementById("myCanvas");
+            var ctx=c.getContext("2d");
+            var img = new Image;
+            img.src = IMAGE + "";
+            console.log(img);
+            ctx.drawImage(img,10,10);
+            var canvas = document.getElementById('myCanvas');
+            var context = canvas.getContext('2d');
+
+
+
 
             document.getElementById('files').addEventListener('change', handleFileSelect, false);
 
@@ -86,10 +102,13 @@
               console.log("DETECT IS DONE! GREIT SUKSEESSS!");
               console.log(data);
 
+              FACES = data;
+
               faceIds = [];
 
               data.forEach(function (element) {
                 faceIds.push(element["faceId"]);
+
               }
             );
 
@@ -109,12 +128,55 @@
                   },
                   type: "POST",
                   // Request body
-                  data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1}'
+                  data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1, "confidenceThreshold":0.1}'
 
               })
               .done(function(data) {
-                console.log("MORE SUKSIIISSS!");
+                console.log("FACES ---->");
+                console.log(FACES);
+                console.log("data ----->");
                 console.log(data);
+                FACES.forEach(function (face) {
+                  data.forEach(function (dat) {
+                    if (face["faceId"] == dat["faceId"]) {
+                      face["candidates"] = dat["candidates"];
+                    }
+                  });
+                });
+
+                console.log("WE ARE DONE!");
+                console.log(FACES);
+
+                FACES.forEach(function (face) {
+
+                    rect = face["faceRectangle"];
+                    context.beginPath();
+                    context.rect(rect["left"], rect["top"], rect["width"], rect["height"]);
+
+                    context.lineWidth = 7;
+                    if (face["candidates"].length != 0) {
+                      //On Kristjan
+                      context.strokeStyle = 'green';
+                    } else {
+                      //Ei ole Kristjan
+                      context.strokeStyle = 'red';
+                    }
+                    context.stroke();
+
+                //  ______ _            _ _   _
+                // |  ____(_)          (_) | | |
+                // | |__   ___  __      _| |_| |
+                // |  __| | \ \/ /     | | __| |
+                // | |    | |>  <      | | |_|_|
+                // |_|    |_/_/\_\     |_|\__(_)
+                // Praegu oletame, et on üks kandidaat, tulevikus on mitu.
+
+
+                  //if (face["candidates"][0])
+                  /**/
+                });
+
+
               })
               .fail(function() {
                   alert("error");
@@ -126,6 +188,8 @@
 
           };
         })(f);
+
+
 
         // Read in the image file as a data URL.
         reader.readAsDataURL(f);
