--- a/Face/index.html
+++ b/Face/index.html
@@ -106,6 +106,11 @@
             var canvas = document.getElementById('myCanvas');
             var context = canvas.getContext('2d');
 
+            max_height = 1080;
+            max_width = 1920;
+
+            img_height = img.height;
+            img_width = img.width;
 
 
 
@@ -157,7 +162,7 @@
                   },
                   type: "POST",
                   // Request body
-                  data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1, "confidenceThreshold":0.1}'
+                  data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1, "confidenceThreshold":0.3}'
 
               })
               .done(function(data) {
@@ -187,13 +192,16 @@
                       PEOPLE.forEach(function (person) {
 
                         if (face["candidates"][0]["personId"] == person["personId"]) {
+                          // Kui confidence on seatud, siis kui praegune confidence on väiksem kui see mis talle määratud siis igno, muidu kirjuta üle.
+
                           person["OnImgIndex"] = KnownPeople;
 
-                          context.font = "32pt Calibri";
-                          context.strokeStyle = 'white';
-                          context.fillText("" + KnownPeople, rect["left"] + (rect["width"] / 2), rect["top"] + (rect["height"]/2));
 
-                          document.getElementById("people").innerHTML = document.getElementById("people").innerHTML + person["OnImgIndex"] + "  -  " + person["name"] + "<br>";
+                          context.font = "16pt Calibri";
+                          context.strokeStyle = 'white';
+                          context.fillText("" + KnownPeople + " (" + Math.floor(face["candidates"][0]["confidence"] * 100) + "%)", rect["left"] + (rect["width"] / 2), rect["top"]  - 20);
+
+                          document.getElementById("people").innerHTML = document.getElementById("people").innerHTML + person["OnImgIndex"] + "  -  " + person["desc"] + " - " + person["name"] + " - " + (face["candidates"][0]["confidence"] * 100) + "<br>";
 
                           KnownPeople += 1;
                         }
